--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   english_words: ^3.1.5
   bloc: ^3.0.0
   flutter_bloc: ^3.2.0
+  equatable: ^0.1.6
+  meta: ^1.1.6
+  provider: ^4.3.1
 
 dev_dependencies:
   flutter_test:
