--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   equatable: ^0.1.6
   meta: ^1.1.6
   provider: ^4.3.1
+  flutter_redux: 0.7.0
 
 dev_dependencies:
   flutter_test:
