--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -29,11 +29,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   english_words: ^3.1.5
-  bloc: ^3.0.0
-  flutter_bloc: ^3.2.0
-  equatable: ^0.1.6
+  bloc: 6.1.3
+  flutter_bloc: 6.1.3
+  equatable: ^2.0.0
   meta: ^1.1.6
-  provider: ^4.3.1
+  provider: ^4.3.3
   flutter_redux: 0.7.0
 
 dev_dependencies:
