--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   responsive_widgets: ^2.0.1
   http: 0.12.2
   google_fonts:
+  pie_chart: ^3.1.1
+  intl: 0.15.8
 
 dev_dependencies:
   flutter_test:
